refactor: BaseEntity의 JavaDoc 추가, 멤버 서비스 코드 개선
- BaseEntity의 JavaDoc 추가
- 멤버 서비스 코드 개선